--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>CPX XP</title>
+  <title>CPX GG</title>
   <link rel="icon" href="https://i.postimg.cc/MG7qzW4x/emote.png" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
